--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <!-- lists -->
             <ul>
                 <li class="item-list"><a class="list" href="#home">Home</a></li>
-                <li class="item-list"><a class="list" href="#about">About</a></li>
+                <li class="item-list"><a class="list" href="#about">About me</a></li>
                 <li class="item-list"><a class="list" href="#skill">Skill</a></li>
-                <li class="item-list"><a class="list" href="#contact">Contact</a></li>
+                <li class="item-list"><a class="list" href="#contact">Contacts</a></li>
             </ul>
         </nav>
 
